# miraipp-template

./: .gitmodules  CMakeLists.txt  README-en.md  README.md
.github/workflows/: ci.yml
MiraiBot/: CMakeLists.txt  main.cpp
MiraiBot/mirai/: array_proxy.h  common.cpp  common.h  events.h  message.cpp  message.h  mirai.h  optional_param.h  session.cpp  session.h  types.cpp  types.h  utils.cpp  utils.h  variant_wrapper.h
MiraiBot/mirai/core/: common.h  events.h  session.cpp  session.h
MiraiBot/mirai/utils/: encoding.cpp  encoding.h  json_extensions.h  optional_param.h  request.cpp  request.h  variant_wrapper.h
project/: CMakeLists.txt
project/app/: CMakeLists.txt  main.cpp
project/miraipp/: CMakeLists.txt
project/miraipp/mirai/: mirai.h
project/miraipp/mirai/core/: common.cpp  common.h  events.cpp  events.h  message.cpp  message.h  session.cpp  session.h  types.cpp  types.h
project/miraipp/mirai/core/message/: common.cpp  common.h  message.cpp  message.h  received_message.cpp  received_message.h  segment.cpp  segment.h  stringified_message.cpp  stringified_message.h
project/miraipp/mirai/core/websockets/: client.cpp  client.h  connection.cpp  connection.h
project/miraipp/mirai/utils/: array_proxy.h  encoding.cpp  functional.h  json_extensions.h  meta.h  optional_param.h  request.cpp  request.h  string.h  thread.cpp  thread.h  variant_wrapper.h
project/miraipp/mirai/websockets/: client.cpp  client.h  connection.h
